--- a/index.html
+++ b/index.html
@@ -982,7 +982,7 @@
         localStorage.setItem('chat_session_id', sessionId);
     }
 
-    const webhookURL = "https://rajigenzi.app.n8n.cloud/webhook-test/input";
+    const webhookURL = "https://rajigenzi.app.n8n.cloud/webhook/input";
 
     function escapeHTML(str) {
         return str.replace(/[&<>"']/g, m => ({
