--- a/index.html
+++ b/index.html
@@ -947,7 +947,7 @@
 
     
 
-<script src="https://preview--panda-chat-welcome-bot.lovable.app/widget.js" agent-id="letchk7PhcRM"></script>
+    <script src="https://preview--panda-chat-welcome-bot.lovable.app/widget.js" agent-id="rajarEPTqkBe"></script>
 
     
     <script>
