--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         }
         #user-message:focus {
             outline: none;
-            border-color: #3B82F6;
+            border-color: #353c43;
         }
         .chat-message {
             animation: fadeIn 0.3s ease-in-out;
@@ -102,20 +102,19 @@
                             <select class="w-full p-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 text-gray-700">
                                 <option value="">Property Type</option>
                                 <option value="condo">Condominium</option>
-                                <option value="house">Terrace House</option>
+                                <option value="house"> House</option>
                                 <option value="apartment">Apartment</option>
                                 <option value="villa">Villa</option>
-                                <option value="land">Land</option>
+                                <option value="HDB">HDB</option>
                             </select>
                         </div>
                         <div>
                             <select class="w-full p-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 text-gray-700">
                                 <option value="">Location</option>
-                                <option value="kl">Kuala Lumpur</option>
-                                <option value="pj">Petaling Jaya</option>
-                                <option value="subang">Subang Jaya</option>
-                                <option value="penang">Penang</option>
-                                <option value="johor">Johor Bahru</option>
+                                <option value="Nv"> Novena</option>
+                                <option value="AMK"> Ang Mo Kio</option>
+                                <option value="Bk"> Bedok </option>
+                                <option value="jr">Jurong</option>                                
                             </select>
                         </div>
                         <div>
