--- a/index.html
+++ b/index.html
@@ -252,11 +252,11 @@
                     <p class="text-gray-600 text-sm">1,023 properties</p>
                 </a>
                 
-                <a href="properties.html?type=land" class="bg-white rounded-lg shadow-md p-6 text-center hover:shadow-lg transition duration-300">
+                <a href="properties.html?type=HDB" class="bg-white rounded-lg shadow-md p-6 text-center hover:shadow-lg transition duration-300">
                     <div class="bg-yellow-100 w-16 h-16 mx-auto rounded-full flex items-center justify-center mb-4">
                         <i class="fas fa-vector-square text-yellow-600 text-2xl"></i>
                     </div>
-                    <h3 class="font-semibold mb-2">Land</h3>
+                    <h3 class="font-semibold mb-2">HDB</h3>
                     <p class="text-gray-600 text-sm">356 properties</p>
                 </a>
             </div>
@@ -534,7 +534,7 @@
                         <li><a href="properties.html?type=house" class="text-gray-400 hover:text-white transition duration-300">Terrace House</a></li>
                         <li><a href="properties.html?type=apartment" class="text-gray-400 hover:text-white transition duration-300">Apartment</a></li>
                         <li><a href="properties.html?type=villa" class="text-gray-400 hover:text-white transition duration-300">Villa</a></li>
-                        <li><a href="properties.html?type=land" class="text-gray-400 hover:text-white transition duration-300">Land</a></li>
+                        <li><a href="properties.html?type=HDB" class="text-gray-400 hover:text-white transition duration-300">HDB</a></li>
                     </ul>
                 </div>
                 <div>
