--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <div class="bg-blue-600 text-white py-20">
         <div class="max-w-7xl mx-auto px-4 text-center">
             <h1 class="text-4xl md:text-5xl font-bold mb-6">Find Your Dream Property Today</h1>
-            <p class="text-xl mb-8">Browse thousands of properties for sale and rent across Malaysia</p>
+            <p class="text-xl mb-8">Browse thousands of properties for sale and rent across Singapore</p>
             
             <!-- Search Form -->
             <div class="max-w-4xl mx-auto bg-white rounded-lg shadow-lg p-6">
